--- a/backend/package.json
+++ b/backend/package.json
@@ -6,5 +6,8 @@
   "repository": "https://github.com/anthonyzamarro/home",
   "author": "azam",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "@apollo/server": "^5.0.0"
+  }
 }
