--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": "https://github.com/anthonyzamarro/home.git",
   "author": "Anthony <anthony.zamarro@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "graphql": "^16.11.0"
+  }
 }
