--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "start": "yarn run compile && node ./dist/index.js"
   },
   "dependencies": {
-    "graphql": "^16.11.0",
-    "typescript": "^5.9.2"
+    "graphql": "^16.11.0"
   },
   "devDependencies": {
+    "typescript": "^5.9.2",
     "@types/node": "^24.2.1",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
