--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,11 @@
   "author": "azam",
   "license": "MIT",
   "private": false,
-  "main": "dist/index.js",
+  "type": "module",
+  "main": "dist/server.js",
   "scripts": {
-  	  "start": "yarn run compile && node ./dist/index.js",
-	  "build": "tsc --build",
+  	  "start": "yarn run compile && node ./dist/server.js",
+	  "build": "tsc -p tsconfig.json",
 	  "compile": "tsc"
   },
   "dependencies": {
