--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,11 @@
 {
 	"extends": "../tsconfig.json",
 	"compilerOptions": {
-		"rootDir": "./src",
-		"outDir": "./dist"
+		"baseUrl": ".",
+		"rootDir": "src",
+		"outDir": "dist",
+		"composite": true
 	},
-	"include": ["src/**/*.ts"]
+	"include": ["src"],
+	"exclude": ["node_modules", "dist"]
 }
