--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "compilerOptions": true,
     "declaration": true,
     "declarationMap": true,
     "incremental": true,
@@ -9,11 +8,14 @@
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "types": ["node"],
+    "strict": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true
+  },
     "references" : [
-	    {"path": "./frontend"},
 	    {"path": "./backend"}
     ],
-    "exclude": ["node_modules"]
-  }
+    "exclude": ["**/node_modules", "**/dist"]
 }
