--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.0",
+    "@apollo/client-integration-nextjs": "^0.13.0",
     "graphql": "^16.11.0",
     "next": "15.4.6",
     "react": "19.1.0",
