--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,7 +4,9 @@
 		"baseUrl": ".",
 		"rootDir": "src",
 		"outDir": "dist",
-		"composite": true
+		"composite": true,
+		"noEmit": false,
+		"emitDeclarationOnly": false
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
