--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
-    "@types/pg": "^8.15.5"
+    "@types/pg": "^8.15.5",
+    "prisma": "^6.16.2"
   }
 }
