--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/server": "^5.0.0",
+    "@prisma/client": "^6.16.2",
     "dotenv": "^17.2.2",
     "pg": "^8.16.3"
   },
